--- a/05_CSS/selector/selector_answer.css
+++ b/05_CSS/selector/selector_answer.css
@@ -31,9 +31,9 @@ ul li:nth-child(3){
 /* 7. 82~85 라인의 type이 text인 <input>태그에 focus 됐을 때의 선택자를 작성(속성 선택자 필수) */
 /* 단, 마지막 읽기 전용 input은 선택에서 제외 */
 /* border가 아닌 background-color로 테스트 할 것! */
-input:focus[type="text"] {
-  background-color: red ;
- }
+input[type="text"]:not([readonly]):focus {
+  background-color: red;
+}
 
 /* 답안 작성: 
   아래와 같이 border 속성을 이용하여 결과 테스트
