--- a/05_CSS/selector/selector_answer.css
+++ b/05_CSS/selector/selector_answer.css
@@ -34,7 +34,7 @@ ul li:nth-child(3){
 input[type="text"]:not([readonly]):focus {
   background-color: red;
 }
-/* TODO 헷갈렸던 문제 */
+/* TODO 헷갈렸던 문제 dd*/
 
 /* 답안 작성: 
   아래와 같이 border 속성을 이용하여 결과 테스트
