--- a/05_CSS/quiz/selector/selector_answer.css
+++ b/05_CSS/quiz/selector/selector_answer.css
@@ -1,12 +1,12 @@
-/* 선택자는 위에서부터 내려오면서 작성하는 것이 좋음 (중간에 생략 가능한 선택자는 생략해도 무방) */
+/* 선택자는 위에서부터 내려오면서 작성하는 것이 좋음(중간에 생략 가능한 선택자는 생략해도 무방) */
 
 /* 1. 14 라인의 <img>태그를 선택하는 선택자를 작성 */
-header .logo img{
+header .logo img {
   border: 2px solid red;
 }
 
 /* 2. 18~28 라인의 <ul>태그를 선택하는 선택자를 작성(하위[후손] 선택자 필수) */
-header ul.main-menu{
+header ul.main-menu {
   border: 2px solid green;
 }
 
@@ -16,17 +16,20 @@ header ul.main-menu{
 }
 
 /* 4. 45~60 라인의 class가 header인 태그를 선택하는 선택자를 작성(자식 선택자 필수) */
-#detail_list > ul.column-1 > li.header{
+#detail_list > ul.column-1 > li.header {
   border: 2px solid darkorange;
 }
 
 /* 5. 62~77 라인의 <ul>태그에서 3번째 <li>을 선택하는 선택자를 작성(가상 클래스 선택자 필수) */
-#detail_list > ul:nth-child(4) > li:nth-child(3){
+#detail_list > ul:nth-child(4) > li:nth-child(3) {
   border: 2px solid olive;
 }
+/* #detail_list > ul:not(.column-1) > li:nth-child(3) {
+  border: 2px solid olive;
+} */
 
 /* 6. 78 라인의 <h3>태그에 마우스를 올렸을 때의 선택자를 작성 */
-#detail_list > h3:last-child:hover{
+#detail_list > h3:last-child:hover {
   border: 2px solid lightskyblue;
 }
 
@@ -36,11 +39,10 @@ header ul.main-menu{
 input[type="text"]:focus:not(input[readonly]) {
   background-color: orange;
 
-  /* focus 시 outline이 자동으로 생기기 때문에 초기화 */
-  outline:none;
+  /* focus 시 outline이 생김 */
+  outline: none;
   border: 2px solid red;
 }
-/* TODO 헷갈렸던 생성자 문제들 */
 
 /* 답안 작성: 
   아래와 같이 border 속성을 이용하여 결과 테스트
@@ -51,3 +53,4 @@ input[type="text"]:focus:not(input[readonly]) {
   주어진 조건을 충족할 것!
   다양한 답이 나올 수 있음!
 */
+/* 테스트 */
