--- a/05_CSS/quiz/layout/2_main_section.html
+++ b/05_CSS/quiz/layout/2_main_section.html
@@ -8,53 +8,121 @@
 
   <style>
     .main-background{
+      width: 100%;
+      height: 500px;
       background-image: url("./images/shoes.jpg");
-      background-size: cover;
-      position: relative;
       background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      text-align: center;
 
+      /* 마진 상쇄 피하기 */
+      /* 1. 테두리가 안붙게 살짝 떨어뜨림(꼼수) */
+      /* padding: 0.1px; */
+      /* 2. 패딩 사용하기(권장) */
+      padding-top: 50px;
+
+      position: relative;
       
     }
+
     .main-title{
-      text-align: center;
-      color: white;
-      font-weight: bold;
-    }
-    .main-content{
-      text-align: center;
-      color: white;
-      font-size: 10px;
+      color: #fff;
+      font-size: 40px;
+      /* margin-top: 100px; */
+      /* (참고) 마진 상쇄 현상
+        : 박스들의 테두리가 만나면 margin이 합쳐짐
+        (박스가 내부에서 만나든 외부에서 만나든 상관없이) 마진을 하나로 합쳐주고 둘 다 마진이 있으면 둘 중에 더 큰 마진을 하나만 적용
+
+        1. 박스 2개가 부모-자식 관계로 위쪽 테두리가 겹친 상태
+        2. 박스 2개가 형제 관계로 위, 아래 테두리가 겹친 상태
+      */
     }
     .main-button{
-      padding: 5px 20px;
-      display: block;
-      margin: 0 auto;
+      padding: 10px 30px;
+      font-size: 20px;
+      background-color: #fff;
+      border: none;
+      border-radius: 5px;
+      margin-top: 20px;
+      cursor: pointer;
+      /* 누를 수 있는 요소는 커서 모양을 포인터로 */
+    }
+    .main-content{
+      color: #fff;
+      text-align: center;
+      font-size: 10px;
     }
     .main-button:hover{
-      
+      background-color: #eee;
     }
+    /* 겹치는 레이아웃 만들기 */
     .sub-description{
       width: 80%;
-      height: 100px;
-      margin: 0 auto;
-      background-color: white;
-      position: relative;
-      border-radius: 10px;
-      text-align: center;
-      font-size: 10px;
-      padding: 5px 0;
-      bottom: -80px;
+      max-width: 700px;
+      background-color: #eee;
+      padding: 10px;
+      border-radius: 20px;
+      
+      /* 1) relative */
+      /* position: relative;
+      top: 100px;
+      margin: 0 auto; */
+
+      /* 2) absolute */
+      position: absolute;
+      bottom: -100px;
+      left: 0;
+      right: 0;
+      margin: auto;
+
     }
     .history{
-      text-align: center;
+      background-color: #aeaeae;
+      padding: 100px 20px 40px;
       font-size: 10px;
-      background-color: gainsboro;
+      
+    }
+    .history > h4 {
+      text-align: center;
     }
 
-    
+    .nav-container{
+      display: flex;
+      /* justify-content: space-between; */
+      align-items: center;
+      padding: 10px;
+      height: 40px;
+      
+    }
+    .menu{
+      display: flex;
+      list-style: none;
+      column-gap: 10px;
+    }
+    /* 메뉴 항목 사이에 간격을 넣는 방법(2가지) 
+      1) margin
+      2) gap (in Flexbox)
+    */
+    /* .menu-item + .menu-item{
+      margin-left: 10px;
+    } */
   </style>
 </head>
 <body>
+  <nav class="nav-container">
+    <h1>Shoes Shop</h1>
+    <!-- 로고와 메뉴 사이를 띄우는 방법(2가지)
+      1) justify-content: space-between;
+      2) flex-grow: 1;
+    -->
+    <div style="flex: 1;"></div>  
+    <ul class="menu">
+      <li class="menu-item">Products</li>
+      <li class="menu-item">Services</li>
+    </ul>
+  </nav>
+
   <div class="main-background">
     <h4 class="main-title">Buy our excellent shoes!</h4>
     <p class="main-content">
@@ -71,6 +139,8 @@
         Adipisci ducimus itaque dolorem similique quae sint possimus!<br>
       </p>
     </div>
+
+    
   </div>
 
   <div class="history">
