2주차목요일 수업

--- a/05_CSS/quiz/layout/5_cart.html
+++ b/05_CSS/quiz/layout/5_cart.html
@@ -18,14 +18,14 @@
       width: 50px;
     }
     .cart-background{
-      background-color: skyblue;
-      width: 1000px;
+      background-color: lightsteelblue;
+      width: 100%;
+      padding: 30px;
     }
     .inner{
-      width: 80%;
+      width: 100%;
       max-width: 700px;
       margin: 0 auto;
-      padding: 30px;
     }
     .shop{
       display: flex;
@@ -41,11 +41,12 @@
       width: 60%;
       text-align: center;
     }
-    table td{
+    table td , tr{
       padding: 10px;
       border-bottom: solid 1px skyblue;
       
     }
+    
 
     .camera{
       width: 60%;
@@ -77,9 +78,9 @@
         <tbody>
           <tr>
             <td colspan="2" class="item" >ITEM</td>            
-            <td>AMOUNT</td>
-            <td>PRICE</td>
-            <td>TOTAL</td>
+            <th>AMOUNT</th>
+            <th>PRICE</th>
+            <th>TOTAL</th>
           </tr>
           <tr>
             <td><img src="images/item1.png" alt="카메라"></td>
