--- a/05_CSS/quiz/layout/7_login_ui.html
+++ b/05_CSS/quiz/layout/7_login_ui.html
@@ -31,6 +31,7 @@
       text-align: center;
       border-radius: 5px;
       margin: 0 auto;
+      background-color: darkorange;
  
     }
     .pw{
@@ -45,14 +46,22 @@
     }
     .eye{
       position: absolute;
-      right: 30px;
+      right: 45px;
       top: 3px;
-      cursor: pointer;           
+      cursor: pointer;
+      opacity: 0;           
     }
     .eye:active{
       
     }
-
+    .eye2{
+      position: absolute;
+      right: 45px;
+      top: 3px;
+      
+      cursor: pointer;
+      
+    }
     
     
   </style>
@@ -61,15 +70,18 @@
   <div class="background">
     <div class="loginbox">
       <div>
-        <label for="id">ID :</label>
-        <input type="text" id="id">
+        <label for="id"></label>
+        <input type="text" id="id" placeholder="ID">
       </div>
       <div class="pw">
-        <label for="password" class="label password">PW:</label>
-        <input type="password" id="password" class="form-input">
+        <label for="password" class="label password"></label>
+        <input type="password" id="password" class="form-input" placeholder="PW">
         <span class="material-symbols-outlined eye">
           visibility
         </span>
+        <span class="material-symbols-outlined eye2">
+          visibility_off
+          </span>
       </div>
       <div>
         <button>로그인</button> 
