3주차월요일

--- a/05_CSS/quiz/layout/7-1_login_ui.html
+++ b/05_CSS/quiz/layout/7-1_login_ui.html
@@ -59,6 +59,10 @@
       border: 1px solid #c5ccd2;
       position: relative;
     }
+    .login-container .id-box.focused,
+    .login-container .pw-box.focused{
+      border: 2px solid #09aa5c;
+    }
     .login-container .id-box{
       border-radius: 8px 8px 0 0;
     }
@@ -73,7 +77,9 @@
       color: rgba(0, 0, 0, .5);
       transition: .3s;
     }
-    .login-container .form-input:focus + .text-label{
+    .login-container .form-input:focus + .text-label,
+    .login-container .id-box.on .text-label,
+    .login-container .pw-box.on .text-label{
       bottom: 30px;
       font-size: 12px;
     }
@@ -96,12 +102,60 @@
       <div class="pw-box">
         <input type="password" id="pw" class="form-input">
         <label for="pw" class="text-label">비밀번호</label>
-        <span class="material-symbols-outlined icon-eye">visibility</span>
+        <span class="material-symbols-outlined icon-eye">visibility_off</span>
       </div>
 
       <button type="button" class="btn btn-login">로그인</button>
       <button type="button" class="btn btn-join">회원가입</button>
     </div>
   </div>
+
+  <script>
+    const inputEls = document.querySelectorAll('input.form-input');
+    const eyeIcon = document.querySelector('.icon-eye');
+    const pwInput = document.getElementById('pw');
+
+
+    inputEls.forEach(function (inputEl) {
+      const parentEl = inputEl.parentElement;
+      console.log(parentEl);
+      
+      inputEl.addEventListener('focus', function () {
+        parentEl.classList.add('focused');
+      });
+
+      // 포커스 해제(blur)
+      inputEl.addEventListener('blur', function () {
+        parentEl.classList.remove('focused');
+      });
+
+      inputEl.addEventListener('change', function () {
+        console.log('change 이벤트 발생!');
+        console.log(inputEl.value);
+        
+        if (inputEl.value) {
+          parentEl.classList.add('on');
+        } else {
+          parentEl.classList.remove('on')
+        }
+        
+      });
+
+      inputEl.addEventListener('input', function () {
+        console.log('input 이벤트 발생!');
+      });
+    });
+
+    eyeIcon.addEventListener('click', function () {
+      if (pwInput.type === 'password') {
+        pwInput.type = 'text';
+        eyeIcon.textContent = 'visibility';
+      } else {
+        pwInput.type = 'password'
+        eyeIcon.textContent = 'visibility_off'
+      }
+    });
+    
+  </script>
 </body>
 </html>
