--- a/08_portfolio-site/css/main.css
+++ b/08_portfolio-site/css/main.css
@@ -4,6 +4,11 @@
 
 }
 
+html {
+  /* 스크롤 이동을 부드럽게 */
+  scroll-behavior: smooth;
+}
+
 body{
   font-family: "Noto Sans KR", sans-serif;
   font-size: 16px;
@@ -31,6 +36,26 @@ a {
   /* 최대값만 제한=반응형 */
   max-width: 1200px;
   margin: 0 auto;
+}
+
+.title{
+  font-size: 50px;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.title::after{
+  content: "";
+  display: block;
+  width: 80px;
+  height: 2px;
+  background-color: #333;
+  margin: 24px auto 0;
+  /* TODO ::after 주는법 */
+}
+img{
+  /* 이미지가 인라인 요소라서 발생하는 문자 기준선(baseline) 아래의 공간을 제거하기 위해 */
+  display: block;
 }
 
 .animate-flash{
@@ -112,6 +137,127 @@ header nav ul li a:hover::after {
 .visual > .inner .purple {
   color:#9b30ff
 }
+/* ABOUT */
+.about{
+  padding: 150px 0;
+}
+.about > .inner{
+  position: relative;
+}
+.about .about__wrapper{
+  display: flex;
+  justify-content: space-between;
+}
+.about .about__wrapper .about__img{
+  width: 40%;
+}
+.about .about__wrapper .about__img img{
+  width: 100%;
+  border-radius: 50%;
+  box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.1);
+
+}
+.about .about__wrapper .about__text{
+  width: 40%;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.about .about__wrapper .about__text .slogan{
+  font-size: 35px;
+  font-weight: bold;
+}
+.about .about__wrapper .about__text h3{
+  font-size: 20px;
+  font-weight: 600;
+}
+.about .about__wrapper .about__text h4{
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 16px;
+}
+.about .about__wrapper .about__text li{
+  line-height: 1.8;
+}
+.about .about__btn{
+  position: absolute;
+  bottom: -30px;
+  right: 30px;
+}
+
+/* .about .about__btn a {
+display: flex;
+align-items: center;
+} */
+.about .about__btn img {
+  display: inline;
+  vertical-align: middle;
+  width: 28px;
+  margin-right: 10px;
+
+}
+/* SKILL */
+.skill {
+  padding: 150px 0;
+  background-color: #000;
+  color: #fff;
+}
+.skill .title::after{
+  background-color: #fff;
+}
+.skill .skill__list{
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+}
+/* 하위 선택자가 아닌 자식 선택자 쓴 것에 유의 */
+.skill .skill__list > li{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  /* 방법1: position */
+  /* position: relative;
+  top: 100px; */
+  /* 방법2: transform */
+  transform: translateY(100px);
+  opacity: 0;
+  transition: 1s;
+}
+.skill.show .skill__list > li{
+  /* 방법1: position */
+  /* top: 0; */
+  transform: translateY(0);
+  opacity: 1;
+}
+.skill.show .skill__list > li:nth-child(1){ transition-delay: 0.2s;}
+.skill.show .skill__list > li:nth-child(2){ transition-delay: 0.4s;}
+.skill.show .skill__list > li:nth-child(3){ transition-delay: 0.6s;}
+.skill.show .skill__list > li:nth-child(4){ transition-delay: 0.8s;}
+.skill.show .skill__list > li:nth-child(5){ transition-delay: 1s;}
+.skill .skill__list li div{
+  width: 50px;
+  height: 40px;
+  background-color: #9b30ff;
+  border-radius: 50%;
+  transform: rotate(-20deg);
+  transition: 0.5s;
+}
+.skill .skill__list li:hover div {
+  transform: rotate(0deg);
+}
+.skill .skill__list li div p {
+  font-weight: bold;
+  font-size: 30px;
+  letter-spacing: -2px;
+}
+.skill .skill__list li h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 30px 0 20px;
+}
+
 
 /* 애니메이션 정의는 맨 마지막에 */
 @keyframes flash {
