--- a/08_portfolio-site/css/main.css
+++ b/08_portfolio-site/css/main.css
@@ -58,6 +58,40 @@ img{
   display: block;
 }
 
+/* 버튼과 같이 여러 곳에서 반복 사용되는 요소를 공통 스타일로 작업하면, 매번 다시 작성할 필요가 없음 */
+.btn {
+  width: 120px;
+  padding: 10px;
+  display: block; /* a, span 같은 인라인 요소를 버튼으로 사용할 수도 있으니 블록으로 지정*/
+  border: 2px solid #333;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.btn:hover {
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--purple{
+  color: #9b30ff;
+  border-color: #9b30ff;
+}
+.btn.btn--purple:hover{
+  color: #fff;
+  background-color: #9b30ff;
+}
+.btn.btn--brown{
+  color: #592b18;
+  border-color: #592b18;
+}
+.btn.btn--brown:hover{
+  color: #fff;
+  background-color: #592b18;
+}
+
 .animate-flash{
   animation-name: flash;
   animation-duration: 0.5s;
@@ -258,6 +292,45 @@ align-items: center;
   margin: 30px 0 20px;
 }
 
+/* PROJECT */
+.project{
+  padding: 150px 0;
+}
+.project .port{
+  display: flex;
+  margin: 20px 0;
+}
+.project .port .port__img,
+.project .port .port__text{
+  width: 50%;
+  height: 400px;
+}
+.project .port .port__img .swiper{
+  width: 100%;
+  height: 100%;
+}
+.project .port .port__img .swiper img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.project .port .port__text{
+  padding: 30px;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.project .port .port__text h3 {
+  font-size: 20px;
+  font-weight: 800;
+}
+.project .port .port__text li{
+  line-height: 1.8;
+}
+.project .port .port__text li span{
+  font-weight: bold;
+}
 
 /* 애니메이션 정의는 맨 마지막에 */
 @keyframes flash {
