--- a/08_portfolio-site/css/main.css
+++ b/08_portfolio-site/css/main.css
@@ -145,10 +145,19 @@ header nav ul li a::after {
   /* position: absolute;
   bottom: -2px;
   left: 0; */
-  transition: 0.5s; 
+  transition: width 0.5s; 
 }
 header nav ul li a:hover::after {
   width: 100%;
+}
+header .btn-hamburger {
+  display: none;
+}
+header .btn-hamburger .material-symbols-outlined {
+  font-size: 40px;
+  /* 수직 정렬 맞추기 */
+  display: block;
+  /* line-height: 60px; */
 }
 
 /* VISUAL */
@@ -463,6 +472,58 @@ footer .copylight {
   /* 처음 상태는 투명에 x축으로 +100px 지점 */
   opacity: 0;
   transform: translateX(100px);
+}
+
+/* 반응형 스타일 */
+@media screen and (max-width: 767px){
+  /* 모바일에서는 화면의 80%만 차지하도록 */
+  .inner {
+    width: 80%;
+  }
+
+  .title{
+    font-size: 30px;
+    margin-bottom: 24px;
+  }
+  .tiger::after {
+    width: 60px;
+  }
+
+  header .btn-hamburger{
+    display: block;
+  }
+  header nav {
+    background-color: #fff8e8;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    /* height: 100%; */
+    height: 0;
+    transition: 0.3s;
+    overflow: hidden;    
+  }
+  header nav.active {
+    height: 100%;
+  }
+  header nav ul {
+    /* ul 태그를 원래 특성인 블록으로 원복 */
+    display: block;
+    padding-top: 60px;
+  }
+  header nav ul li {
+    padding: 10px 80px;
+    font-size: 30px;
+  }
+  header nav ul li a {
+    transition: 0.5s;
+  }
+  header nav ul li a:hover {
+    letter-spacing: 10px;
+  }
+  header nav.active{
+    height: 100%;
+  }
 }
 
 
