--- a/08-1_portfolio-site/css/main.css
+++ b/08-1_portfolio-site/css/main.css
@@ -13,6 +13,14 @@ body{
   
 
 }
+.special-gothic-expanded-one-regular a{
+  transition: 0.5s;
+}
+/* 상단 버튼 눌렀을때 효과주기 */
+.special-gothic-expanded-one-regular a:hover{
+  color: teal;
+}
+
 img{
   /* 이미지가 인라인 요소라서 발생하는 문자 기준선(baseline) 아래의 공간을 제거하기 위해 */
   display: block;
@@ -53,6 +61,21 @@ header nav ul li {
 }
 header nav ul li a {
   position: relative;
+}
+/* 가상 선택자로 밑줄생기게 하기 */
+header nav ul li a::after{
+  content: "";
+  display: block;
+  width: 0; /* 초기에는 밑줄이 없도록 0으로 설정 */
+  height: 3px;
+  background-color: sienna;
+  /* position: absolute;
+  bottom: -2px;
+  left: 0; */
+  transition: width 0.5s; 
+}
+header nav ul li a:hover::after {
+  width: 100%;
 }
 header{
 background-color: #fff;
@@ -368,8 +391,40 @@ a {
   .special-gothic-expanded-one-regular ul{
     display: none;
   }
-  header .btn-hamburger .material-symbols-outlined{
+  header .btn-hamburger{
     display: block;
+  }
+  header nav {
+    background-color: #fff8e8;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    /* height: 100%; */
+    height: 0;
+    transition: 0.3s;
+    overflow: hidden;    
+  }
+  header nav.active {
+    height: 100%;
+  }
+  header nav ul {
+    /* ul 태그를 원래 특성인 블록으로 원복 */
+    display: block;
+    padding-top: 60px;
+  }
+  header nav ul li {
+    padding: 10px 80px;
+    font-size: 30px;
+  }
+  header nav ul li a {
+    transition: 0.5s;
+  }
+  header nav ul li a:hover {
+    letter-spacing: 10px;
+  }
+  header nav.active{
+    height: 100%;
   }
   
 
