--- a/08-1_porsenal_portfolio-site/css/main.css
+++ b/08-1_porsenal_portfolio-site/css/main.css
@@ -230,7 +230,7 @@ a {
 
 .skill > .inner{
   position: relative;
-  background-color: wheat;
+  /* background-color: wheat; */
   padding: 50px 0 300px;
   
   
